--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.14.1",
+    "mongoose-sequence": "^6.0.1",
+    "nodemon": "^3.1.10",
+    "swagger-ui-express": "^5.0.1",
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1"
   }
 }
