--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URL=
+MONGO_URL=mongodb+srv://abu0987654321abuali:Qazxcvbnmlp05!@bakrcluster.bd1qzxk.mongodb.net/?retryWrites=true&w=majority&appName=BakrCluster
 PORT=8080
+TELEGRAM_BOT_TOKEN=7532038605:AAGpc2H3IvWtXkACz7FMHvIipyz8Ll1LKts
